--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,43 @@
 }
 
 body {
-  font-family: sans.serif;
+  margin: auto;
+  font-family: Verdana, sans-serif;
   font-size: 112.5%;
   line-height: 1.4;
+  color: var(--primary);
+  background-color: var(--bg-col);
+}
+
+.mypic {
+  width: 100%;
+  height: auto;
 }
 
 input,
 button,
 textarea {
+  font-size: inherit;
+}
+
+:root {
+  --primary: rgb(1, 1, 36);
+  --bg-col: rgb(115, 160, 172);
+}
+
+a {
+  text-decoration: none;
+}
+
+.page-header {
+  padding: 50px;
+  margin: auto;
+  background: rgb(76, 154, 175);
+  box-sizing: border-box;
+}
+
+main {
+}
+
+.contact {
 }
