--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,39 @@
 
 body {
   margin: auto;
-  font-family: Verdana, sans-serif;
+  font-family: Verdana, Arial, sans-serif;
   font-size: 112.5%;
   line-height: 1.4;
   color: var(--primary);
   background-color: var(--bg-col);
+}
+
+header {
+  display: grid;
+  place-items: center;
+  grid-gap: 20px;
+  padding: 50px;
+  margin: auto;
+  background-color: var(--bg-col);
+}
+
+h1 {
+  font-size: 30px;
+}
+
+h2 {
+  font-size: 20px;
+}
+
+.links {
+  background: var(--bg-col);
+  border-color: grey;
+  border-width: 1px;
+  border-style: solid;
+  margin: 10px;
+  padding: 5px;
+  color: grey;
+  font-size: 12px;
 }
 
 .mypic {
@@ -33,15 +61,40 @@ a {
   text-decoration: none;
 }
 
-.page-header {
-  padding: 50px;
-  margin: auto;
-  background: rgb(76, 154, 175);
-  box-sizing: border-box;
-}
-
 main {
 }
 
 .contact {
+  text-decoration: none;
+}
+
+.img {
+  width: 100%;
+  height: auto;
+}
+
+.find-me {
+  display: flex;
+  flex-direction: row;
+}
+
+.keywords {
+}
+
+button {
+  background: rgb(125, 153, 158);
+  color: black;
+  font-size: 15px;
+  border-radius: 6px;
+}
+
+address {
+  margin-top: 30px;
+}
+
+table,
+th,
+td {
+  font-size: 15px;
+  border: 1px black;
 }
