--- a/styles/components/_base.css
+++ b/styles/components/_base.css
@@ -10,3 +10,20 @@ body {
   color: var(--primary);
   background-color: var(--bg-col);
 }
+
+h1 {
+  font-size: 30px;
+}
+
+h2 {
+  font-size: 20px;
+}
+
+.img {
+  width: 100%;
+  height: auto;
+}
+
+.contact {
+  text-decoration: none;
+}
